tests/samples/compile_errors/set_vs_let/missing_set.bas
Attribute VB_Name = "MissingSet"
Sub TestNoSet()
    Dim col As Object
    col = CreateObject("Scripting.Dictionary")  ' Object assignment without Set
End Sub
